samples/_failures_safe/1761622071_8a715f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b54082e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4b54082e.c:172:9: error: expected declaration or statement at end of input
  172 |         } else {
      |         ^
./samples/SAFE/__tmp_4b54082e.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b54082e.c:172:9: error: expected declaration or statement at end of input
